added the navigation

--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
     <title>Staffordshire University | Department Of Computing</title>
 </head>
 <body>
-    
+    <nav class="nav">
+        <div class="wrapper">
+            <div class="nav__logo-image">
+                <img src="images/staffs-logo.svg" alt="Staffordshire University logo">
+                <h6>Department Of Computing</h6>
+            </div>
+            <ul class="list">
+                <li class="item"><a href="/" class="link">Home</a></li>
+                <li class="item"><a href="/courses.html" class="link">Courses</a></li>
+                <li class="item"><a href="#" class="link">Events</a></li>
+                <li class="item"><a href="#" class="link">My timetable</a></li>
+            </ul>
+        </div>
+    </nav>
 </body>
 </html>
