--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="nav">
         <div class="wrapper">
-            <div class="nav__logo-image">
+            <div class="nav__logo-section">
                 <img src="images/staffs-logo.svg" alt="Staffordshire University logo">
                 <h6>Department Of Computing</h6>
             </div>
