styled the navigation

--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
     <nav class="nav">
         <div class="wrapper">
             <div class="nav__logo-section">
-                <img src="images/staffs-logo.svg" alt="Staffordshire University logo">
-                <h6>Department Of Computing</h6>
+                <a href="/"><img src="images/staffs-logo.svg" alt="Staffordshire University logo">
+                <h6 class="department">Department Of Computing</h6></a>
             </div>
             <ul class="list">
                 <li class="item"><a href="/" class="link">Home</a></li>
                 <li class="item"><a href="/courses.html" class="link">Courses</a></li>
-                <li class="item"><a href="#" class="link">Events</a></li>
-                <li class="item"><a href="#" class="link">My timetable</a></li>
+                <li class="item"><a href="#" class="link nav__link--not-working">Events</a></li>
+                <li class="item"><a href="#" class="link nav__link--not-working">My timetable</a></li>
             </ul>
         </div>
     </nav>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
