created the header mark-up and imported the mixins into variables.scss

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         </div>
     </nav>
 
+    <div class="header">
+        <video src=""></video>
+        <div class="header__button--play"></div>
+        <div class="header-button--pause"></div>
+    </div>
+
     <script src="js/script.js"></script>
 </body>
 </html>
