--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="nav">
         <div class="wrapper">
             <div class="nav__logo-section">
-                <a href="/"><img src="images/staffs-logo.svg" alt="Staffordshire University logo">
+                <a href="/"><img src="images/icons/logo-icon.svg" alt="Staffordshire University logo">
                 <h6 class="department">Department Of Computing</h6></a>
             </div>
             <ul class="list">
