Created the header mark-up

--- a/index.html
+++ b/index.html
@@ -25,8 +25,18 @@
         </div>
     </nav>
 
-    <div class="header">
-        
+    <div class="header header--big">
+        <div class="header__slide-timer"></div>
+
+        <div class="header-content">
+            <h1 class="header__page-heading">We thrive to success</h1>
+            <a href="#" class="button button--large">Book an open event</a>
+        </div>
+
+        <div class="header__slider-items">
+            <img src="images/icons/banner-arrow-left.svg" alt="Arrow left" class="slider--arrow-left">
+            <img src="images/icons/banner-arrow-right.svg" alt="Arrow right" class="slider--arrow-left">
+        </div>
         
     </div>
 
