Finished the creating the slider mark-up and styling

--- a/index.html
+++ b/index.html
@@ -29,13 +29,18 @@
         <div class="header__slide-timer"></div>
 
         <div class="header-content">
-            <h1 class="header__page-heading">We thrive to success</h1>
+            <h1 class="page-heading">We thrive to success</h1>
             <a href="#" class="button button--large">Book an open event</a>
         </div>
 
-        <div class="header__slider-items">
-            <img src="images/icons/banner-arrow-left.svg" alt="Arrow left" class="slider--arrow-left">
-            <img src="images/icons/banner-arrow-right.svg" alt="Arrow right" class="slider--arrow-left">
+        <img src="images/icons/banner-arrow-left.svg" alt="Arrow left" class="slider__arrow--left slider__arrows">
+        <img src="images/icons/banner-arrow-right.svg" alt="Arrow right" class="slider__arrow--right slider__arrows">
+
+        <div class="slider-dots">
+            <div class="dot"></div>
+            <div class="dot is-active"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
         </div>
         
     </div>
