--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </nav>
 
-    <div class="header header--big">
+    <header class="header header--big">
         <div class="header__slide-timer"></div>
 
         <div class="header-content">
@@ -61,7 +61,71 @@
                 </form>
             </div>
         </div>
-    </div>
+    </header>
+
+    <article class="section wrapper events-section">
+        <h2 class="section-heading">Events</h2>
+
+        <section class="grid grid-2">
+            <div class="event grid no-gap">
+                <div class="event__date flex align-center column space-center">
+                    <p class="day">2</p>
+                    <p class="month">Mar</p>
+                </div>
+
+                <div class="event__content flex column space-around">
+                    <h3 class="event-heading">Assignment hand in</h3>
+                    <p class="event-content">This is the day where the students from web development class hand in their assignment work. After a long delay, this day will finally arrive.</p>
+                    <a href="" class="alt-link">Read more</a>
+                </div>
+            </div>
+
+            <div class="event grid no-gap">
+                <div class="event__date flex align-center column space-center">
+                    <p class="day">7</p>
+                    <p class="month">Mar</p>
+                </div>
+
+                <div class="event__content flex column space-around">
+                    <h3 class="event-heading">Lorem, ipsum dolor.</h3>
+                    <p class="event-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto illum recusandae natus architecto culpa dicta illo deleniti eos repellat in.</p>
+                    <a href="" class="alt-link">Read more</a>
+                </div>
+            </div>
+
+            <div class="event grid no-gap">
+                <div class="event__date flex align-center column space-center">
+                    <p class="day">9</p>
+                    <p class="month">Mar</p>
+                </div>
+
+                <div class="event__content flex column space-around">
+                    <h3 class="event-heading">Lorem, ipsum dolor.</h3>
+                    <p class="event-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto illum recusandae natus architecto culpa dicta illo deleniti eos repellat in.</p>
+                    <a href="" class="alt-link">Read more</a>
+                </div>
+            </div>
+
+            <div class="event grid no-gap">
+                <div class="event__date flex align-center column space-center">
+                    <p class="day">14</p>
+                    <p class="month">Mar</p>
+                </div>
+
+                <div class="event__content flex column space-around">
+                    <h3 class="event-heading">Lorem, ipsum dolor.</h3>
+                    <p class="event-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto illum recusandae natus architecto culpa dicta illo deleniti eos repellat in.</p>
+                    <a href="" class="alt-link">Read more</a>
+                </div>
+            </div>
+        </section>
+    </article>
+
+    <article class="section wrapper courses">
+        <h2 class="section-heading">Courses</h2>
+
+        
+    </article>
 
     <script src="js/script.js"></script>
 </body>
