Made some space for the slide functionality in the js file, made the section headings uppercase and changed the first events paragraph

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                 <div class="event__content flex column space-around">
                     <h3 class="event-heading">Assignment hand in</h3>
-                    <p class="event-content">This is the day where the students from web development class hand in their assignment work. After a long delay, this day will finally arrive.</p>
+                    <p class="event-content">This is the day where the students from web development class hand in their assignment work. After a long wait, this day will finally arrive.</p>
                     <a href="" class="alt-link">Read more</a>
                 </div>
             </div>
@@ -124,7 +124,7 @@
     <article class="section wrapper courses">
         <h2 class="section-heading">Courses</h2>
 
-        
+
     </article>
 
     <script src="js/script.js"></script>
