Completed the courses section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </nav>
 
-    <header class="header header--big">
+    <header class="header header--big bg-img-properties">
         <div class="header__slide-timer"></div>
 
         <div class="header-content">
@@ -49,7 +49,7 @@
                     <label for="course-name" class="white-color">Search courses</label>
 
                     <select class="form__study-level" name="study-level" id="study-level">
-                        <option value="undergraduat">Choose a study level</option>
+                        <option value="" disabled selected>Choose a study level</option>
                         <option value="undergraduat">Undergraduate</option>
                         <option value="postgraduat">Postgraduate</option>
                     </select>
@@ -123,9 +123,118 @@
 
     <article class="section wrapper courses">
         <h2 class="section-heading">Courses</h2>
+        <div class="grid grid-2 courses-wrapper">
+            <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/cloud-computing.jpg');">
+                <div class="course__bg-overlay"></div>
 
+                <div class="course__contents">
+                    <div class="expand-collapse flex space-center align-center">
+                        <div class="plus"></div>
+                        <div class="minus"></div>
+                    </div>
+                    <h3 class="third-heading white-color">Cloud computing</h3>
 
+                    <div class="course__study-levels-wrapper flex column space-between">
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time, with a foundation year</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time, with a placement year</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Part time</p>
+                            <p>4 years</p>
+                        </div>
+                    </div>
+
+                    <a href="#" class="white-color">Find out more</a>
+                </div>
+            </div>
+
+            <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/networking.jpg');">
+                <div class="course__bg-overlay"></div>
+
+                <div class="course__contents">
+                    <div class="expand-collapse flex space-center align-center">
+                        <div class="plus"></div>
+                        <div class="minus"></div>
+                    </div>
+                    <h3 class="third-heading white-color">Networking</h3>
+
+                    <div class="course__study-levels-wrapper flex column space-between">
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time, with a foundation year</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time, with a placement year</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Part time</p>
+                            <p>4 years</p>
+                        </div>
+                    </div>
+
+                    <a href="#" class="white-color">Find out more</a>
+                </div>
+            </div>
+
+            <div class="course-wrapper grid-span bg-img-properties" style="background: url('images/thumbnails/web-development.jpg');">
+                <div class="course__bg-overlay"></div>
+
+                <div class="course__contents">
+                    <div class="expand-collapse flex space-center align-center">
+                        <div class="plus"></div>
+                        <div class="minus"></div>
+                    </div>
+                    <h3 class="third-heading white-color">Web Development</h3>
+
+                    <div class="course__study-levels-wrapper grid grid-2 space-between">
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time, with a foundation year</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time, with a placement year</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Part time</p>
+                            <p>4 years</p>
+                        </div>
+                    </div>
+
+                    <a href="#" class="white-color">Find out more</a>
+                </div>
+            </div>
+        </div>
     </article>
+
+    <article class="section wrapper"></article>
 
     <script src="js/script.js"></script>
 </body>
