Finished the testimonials section and initialised firebase

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <img src="images/icons/banner-arrow-left.svg" alt="Arrow left" class="slider__arrow--left slider__arrows">
         <img src="images/icons/banner-arrow-right.svg" alt="Arrow right" class="slider__arrow--right slider__arrows">
 
-        <div class="slider-dots">
-            <div class="dot"></div>
+        <div class="dots">
             <div class="dot is-active"></div>
+            <div class="dot"></div>
             <div class="dot"></div>
             <div class="dot"></div>
         </div>
@@ -119,6 +119,13 @@
                 </div>
             </div>
         </section>
+
+        <div class="dots">
+            <div class="dot is-active"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+        </div>
     </article>
 
     <article class="section wrapper courses">
@@ -234,7 +241,31 @@
         </div>
     </article>
 
-    <article class="section wrapper"></article>
+    <article class="section wrapper testimonials text-center">
+        <h2 class="section-heading">student testimonials</h2>
+
+        <section class="testimonial-wrapper">
+            <img src="images/testimonial-images/carla.png" alt="Carla's image">
+
+            <div class="testimonial__content">
+                <h3 class="name white-color">Carla Smith</h3>
+                <p class="testimonial white-color">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos expedita illum praesentium quasi quibusdam sunt totam voluptas! Commodi, necessitatibus nobis?</p>
+            </div>
+
+            <div class="dots">
+                <div class="dot is-active"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+        </section>
+    </article>
+
+    <footer class="section">
+        <div class="wrapper grid grid-3">
+
+        </div>
+    </footer>
 
     <script src="js/script.js"></script>
 </body>
