Created and styled the news and instagram section

--- a/courses.html
+++ b/courses.html
@@ -32,6 +32,300 @@
         </div>
     </header>
 
+    <article class="section wrapper courses">
+        <h2 class="section-heading">Courses</h2>
+        <div class="grid grid-2 courses-wrapper">
+            <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/cloud-computing.jpg');">
+                <div class="course__bg-overlay"></div>
+
+                <div class="course__contents">
+                    <div class="expand-collapse flex space-center align-center">
+                        <div class="plus"></div>
+                        <div class="minus"></div>
+                    </div>
+                    <h3 class="third-heading white-color">Cloud computing</h3>
+
+                    <div class="course__study-levels-wrapper flex column space-between">
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time, with a foundation year</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time, with a placement year</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Part time</p>
+                            <p>4 years</p>
+                        </div>
+                    </div>
+
+                    <a href="#" class="white-color">Find out more</a>
+                </div>
+            </div>
+
+            <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/networking.jpg');">
+                <div class="course__bg-overlay"></div>
+
+                <div class="course__contents">
+                    <div class="expand-collapse flex space-center align-center">
+                        <div class="plus"></div>
+                        <div class="minus"></div>
+                    </div>
+                    <h3 class="third-heading white-color">Networking</h3>
+
+                    <div class="course__study-levels-wrapper flex column space-between">
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time, with a foundation year</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time, with a placement year</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Part time</p>
+                            <p>4 years</p>
+                        </div>
+                    </div>
+
+                    <a href="#" class="white-color">Find out more</a>
+                </div>
+            </div>
+
+            <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/web-development.jpg');">
+                <div class="course__bg-overlay"></div>
+
+                <div class="course__contents">
+                    <div class="expand-collapse flex space-center align-center">
+                        <div class="plus"></div>
+                        <div class="minus"></div>
+                    </div>
+                    <h3 class="third-heading white-color">Web Development</h3>
+
+                    <div class="course__study-levels-wrapper grid grid-2 space-between">
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time, with a foundation year</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time, with a placement year</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Part time</p>
+                            <p>4 years</p>
+                        </div>
+                    </div>
+
+                    <a href="#" class="white-color">Find out more</a>
+                </div>
+            </div>
+
+            <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/web-development.jpg');">
+                <div class="course__bg-overlay"></div>
+
+                <div class="course__contents">
+                    <div class="expand-collapse flex space-center align-center">
+                        <div class="plus"></div>
+                        <div class="minus"></div>
+                    </div>
+                    <h3 class="third-heading white-color">Web Development</h3>
+
+                    <div class="course__study-levels-wrapper grid grid-2 space-between">
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time, with a foundation year</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time, with a placement year</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Part time</p>
+                            <p>4 years</p>
+                        </div>
+                    </div>
+
+                    <a href="#" class="white-color">Find out more</a>
+                </div>
+            </div>
+
+            <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/web-development.jpg');">
+                <div class="course__bg-overlay"></div>
+
+                <div class="course__contents">
+                    <div class="expand-collapse flex space-center align-center">
+                        <div class="plus"></div>
+                        <div class="minus"></div>
+                    </div>
+                    <h3 class="third-heading white-color">Web Development</h3>
+
+                    <div class="course__study-levels-wrapper grid grid-2 space-between">
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time, with a foundation year</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time, with a placement year</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Part time</p>
+                            <p>4 years</p>
+                        </div>
+                    </div>
+
+                    <a href="#" class="white-color">Find out more</a>
+                </div>
+            </div>
+
+            <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/web-development.jpg');">
+                <div class="course__bg-overlay"></div>
+
+                <div class="course__contents">
+                    <div class="expand-collapse flex space-center align-center">
+                        <div class="plus"></div>
+                        <div class="minus"></div>
+                    </div>
+                    <h3 class="third-heading white-color">Web Development</h3>
+
+                    <div class="course__study-levels-wrapper grid grid-2 space-between">
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time, with a foundation year</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time, with a placement year</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Part time</p>
+                            <p>4 years</p>
+                        </div>
+                    </div>
+
+                    <a href="#" class="white-color">Find out more</a>
+                </div>
+            </div>
+
+            <div class="course-wrapper grid-span bg-img-properties" style="background: url('images/thumbnails/web-development.jpg');">
+                <div class="course__bg-overlay"></div>
+
+                <div class="course__contents">
+                    <div class="expand-collapse flex space-center align-center">
+                        <div class="plus"></div>
+                        <div class="minus"></div>
+                    </div>
+                    <h3 class="third-heading white-color">Web Development</h3>
+
+                    <div class="course__study-levels-wrapper grid grid-2 space-between">
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time, with a foundation year</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Full time, with a placement year</p>
+                            <p>4 years</p>
+                        </div>
+
+                        <div class="study-level white-bg flex space-between">
+                            <p>Part time</p>
+                            <p>4 years</p>
+                        </div>
+                    </div>
+
+                    <a href="#" class="white-color">Find out more</a>
+                </div>
+            </div>
+        </div>
+    </article>
+
+    <article class="news section narrow-wrapper">
+        <h3 class="section-heading">News</h3>
+        <section class="grid grid-2">
+            <div class="news__wrapper">
+                <div class="news__date">23 Feb</div>
+                <div class="news__thumbnail bg-img-properties"></div>
+
+                <div class="news__content">
+                    <h3>Lorem, ipsum dolor.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit totam quaerat laborum ducimus nulla sunt, molestias quam earum architecto consequuntur? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione, officia?</p>
+                    <a href="#" class="alt-link">Read more</a>
+                </div>
+            </div>
+
+            <div class="news__wrapper">
+                <div class="news__date">26 Feb</div>
+                <div class="news__thumbnail bg-img-properties"></div>
+
+                <div class="news__content">
+                    <h3>Lorem, ipsum dolor.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit totam quaerat laborum ducimus nulla sunt, molestias quam earum architecto consequuntur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, odio.</p>
+                    <a href="#" class="alt-link">Read more</a>
+                </div>
+            </div>
+        </section>
+    </article>
+
+    <article class="section wrapper instagram">
+        <h3 class="section-heading">Instagram</h3>
+
+        <section class="grid grid-3">
+            <img src="images/instagram/dab.png" alt="instagram image 1">
+            <img src="images/instagram/meetup.png" alt="instagram image 2">
+            <img src="images/instagram/students.png" alt="instagram image 3">
+        </section>
+    </article>
+
     <footer class="section">
         <div class="wrapper grid grid-2">
             <div class="footer__contact-info">
@@ -59,6 +353,7 @@
 
                     <nav class="footer__nav">
                         <ul>
+                            <li><a href="/courses.html">All courses</a></li>
                             <li><a href="#">Undergraduate</a></li>
                             <li><a href="#">Postgraduate</a></li>
                             <li><a href="#">Part-time</a></li>
