--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
 
                     <nav class="footer__nav">
                         <ul>
+                            <li><a href="/courses.html">All courses</a></li>
                             <li><a href="#">Undergraduate</a></li>
                             <li><a href="#">Postgraduate</a></li>
                             <li><a href="#">Part-time</a></li>
