completed the courses page

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </div>
         </section>
 
-        <div class="dots">
+        <div class="dots inverted mt-10">
             <div class="dot is-active"></div>
             <div class="dot"></div>
             <div class="dot"></div>
@@ -239,6 +239,8 @@
                 </div>
             </div>
         </div>
+
+        <a href="/courses.html" class="mt-30 block">View more courses</a>
     </article>
 
     <article class="section wrapper testimonials text-center">
@@ -252,7 +254,7 @@
                 <p class="testimonial white-color">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos expedita illum praesentium quasi quibusdam sunt totam voluptas! Commodi, necessitatibus nobis?</p>
             </div>
 
-            <div class="dots">
+            <div class="dots inverted--light">
                 <div class="dot is-active"></div>
                 <div class="dot"></div>
                 <div class="dot"></div>
@@ -279,6 +281,10 @@
 
                 <div class="mt-60">
                     <a class="white-color" href="#">Contact</a>
+                </div>
+
+                <div class="mt-60">
+                    <p class="white-color">&copy; Staffordshire University 2020</p>
                 </div>
             </div>
 
