--- a/courses.html
+++ b/courses.html
@@ -34,6 +34,9 @@
 
     <article class="section wrapper courses">
         <h2 class="section-heading">Courses</h2>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quae blanditiis architecto voluptas ullam asperiores saepe, rerum alias dicta dolore? Sint facilis molestiae omnis placeat iure accusantium incidunt, maiores harum ratione quam aliquam est fugit dignissimos eaque quas amet qui ducimus maxime quibusdam quis facere fugiat. Dolore eligendi similique? Lorem ipsum dolor.</p>
+
         <div class="grid grid-2 courses-wrapper">
             <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/cloud-computing.jpg');">
                 <div class="course__bg-overlay"></div>
@@ -117,7 +120,7 @@
                     </div>
                     <h3 class="third-heading white-color">Web Development</h3>
 
-                    <div class="course__study-levels-wrapper grid grid-2 space-between">
+                    <div class="course__study-levels-wrapper flex column space-between">
                         <div class="study-level white-bg flex space-between">
                             <p>Full time</p>
                             <p>4 years</p>
@@ -143,7 +146,7 @@
                 </div>
             </div>
 
-            <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/web-development.jpg');">
+            <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/software-development.jpg');">
                 <div class="course__bg-overlay"></div>
 
                 <div class="course__contents">
@@ -151,9 +154,9 @@
                         <div class="plus"></div>
                         <div class="minus"></div>
                     </div>
-                    <h3 class="third-heading white-color">Web Development</h3>
+                    <h3 class="third-heading white-color">Software Development</h3>
 
-                    <div class="course__study-levels-wrapper grid grid-2 space-between">
+                    <div class="course__study-levels-wrapper flex column space-between">
                         <div class="study-level white-bg flex space-between">
                             <p>Full time</p>
                             <p>4 years</p>
@@ -179,7 +182,7 @@
                 </div>
             </div>
 
-            <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/web-development.jpg');">
+            <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/big-data.jpg');">
                 <div class="course__bg-overlay"></div>
 
                 <div class="course__contents">
@@ -187,9 +190,9 @@
                         <div class="plus"></div>
                         <div class="minus"></div>
                     </div>
-                    <h3 class="third-heading white-color">Web Development</h3>
+                    <h3 class="third-heading white-color">Big Data Analysis</h3>
 
-                    <div class="course__study-levels-wrapper grid grid-2 space-between">
+                    <div class="course__study-levels-wrapper flex column space-between">
                         <div class="study-level white-bg flex space-between">
                             <p>Full time</p>
                             <p>4 years</p>
@@ -215,7 +218,7 @@
                 </div>
             </div>
 
-            <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/web-development.jpg');">
+            <div class="course-wrapper bg-img-properties" style="background: url('images/thumbnails/cyber-security.jpg');">
                 <div class="course__bg-overlay"></div>
 
                 <div class="course__contents">
@@ -223,9 +226,9 @@
                         <div class="plus"></div>
                         <div class="minus"></div>
                     </div>
-                    <h3 class="third-heading white-color">Web Development</h3>
+                    <h3 class="third-heading white-color">Cyber security</h3>
 
-                    <div class="course__study-levels-wrapper grid grid-2 space-between">
+                    <div class="course__study-levels-wrapper flex column space-between">
                         <div class="study-level white-bg flex space-between">
                             <p>Full time</p>
                             <p>4 years</p>
@@ -251,7 +254,7 @@
                 </div>
             </div>
 
-            <div class="course-wrapper grid-span bg-img-properties" style="background: url('images/thumbnails/web-development.jpg');">
+            <div class="course-wrapper grid-span bg-img-properties" style="background: url('images/thumbnails/robotics.jpg');">
                 <div class="course__bg-overlay"></div>
 
                 <div class="course__contents">
@@ -259,7 +262,7 @@
                         <div class="plus"></div>
                         <div class="minus"></div>
                     </div>
-                    <h3 class="third-heading white-color">Web Development</h3>
+                    <h3 class="third-heading white-color">AI & Robotics</h3>
 
                     <div class="course__study-levels-wrapper grid grid-2 space-between">
                         <div class="study-level white-bg flex space-between">
@@ -314,9 +317,16 @@
                 </div>
             </div>
         </section>
+
+        <div class="dots inverted">
+            <div class="dot is-active"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+        </div>
     </article>
 
-    <article class="section wrapper instagram">
+    <article class="section narrow-wrapper instagram">
         <h3 class="section-heading">Instagram</h3>
 
         <section class="grid grid-3">
@@ -324,6 +334,7 @@
             <img src="images/instagram/meetup.png" alt="instagram image 2">
             <img src="images/instagram/students.png" alt="instagram image 3">
         </section>
+        <a href="#" class="top-m">See more</a>
     </article>
 
     <footer class="section">
@@ -344,6 +355,10 @@
 
                 <div class="mt-60">
                     <a class="white-color" href="#">Contact</a>
+                </div>
+
+                <div class="mt-60">
+                    <p class="white-color">&copy; Staffordshire University 2020</p>
                 </div>
             </div>
 
