finished the individual course overview section

--- a/courses/web-development.html
+++ b/courses/web-development.html
@@ -28,21 +28,33 @@
     <header class="header header--small header--web-development bg-img-properties">
 
         <div class="wrapper">
-            <h1 class="page-heading">Courses</h1>
+            <h1 class="page-heading">Web Development</h1>
         </div>
     </header>
 
-    <article class="section wrapper courses course-overview gray-bg">
+    <article class="section wrapper">
+      <section class="course-overview gray-bg p-60">
         <h2 class="section-heading no-margin">Course Overiew</h2>
 
         <p class="overview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quae blanditiis architecto voluptas ullam asperiores saepe, rerum alias dicta dolore? Sint facilis molestiae omnis placeat iure accusantium incidunt, maiores harum ratione quam aliquam est fugit dignissimos eaque quas amet qui ducimus maxime quibusdam quis facere fugiat. Dolore eligendi similique? Lorem ipsum dolor.</p>
+
+        <h3 class="no-margin mt-10">Pathways</h3>
+        <div class="path-ways flex row white-color">
+          <div class="tag">IBM</div>
+          <div class="tag">Jaguar</div>
+          <div class="tag">BMW</div>
+          <div class="tag">NASA</div>
+          <div class="tag">Amazon</div>
+          <div class="tag">Kanuka Digital</div>
+        </div>
+      </section>
     </article>
 
     <footer class="section">
         <div class="wrapper grid grid-2">
             <div class="footer__contact-info">
                 <div class="logo-section flex align-center">
-                    <a href="/"><img src="images/icons/logo-icon.svg" alt="Logo icon">
+                    <a href="/"><img src="../images/icons/logo-icon.svg" alt="Logo icon">
                         <h6 class="white-color department">Department of Computing</h6></a>
                 </div>
 
