Changed the course overview on web development

--- a/courses/web-development.html
+++ b/courses/web-development.html
@@ -36,7 +36,7 @@
       <section class="course-overview gray-bg p-60">
         <h2 class="section-heading no-margin">Course Overiew</h2>
 
-        <p class="overview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quae blanditiis architecto voluptas ullam asperiores saepe, rerum alias dicta dolore? Sint facilis molestiae omnis placeat iure accusantium incidunt, maiores harum ratione quam aliquam est fugit dignissimos eaque quas amet qui ducimus maxime quibusdam quis facere fugiat. Dolore eligendi similique? Lorem ipsum dolor.</p>
+        <p class="overview">Specialise in the design and development of applications using web and mobile technologies. You will learn HTML, CSS, ECMAScript/JavaScript to create interactive user experiences.  What’s more, you’ll see how current frameworks can aid with effective design for a multitude of devices and environments. You’ll learn client-side and server-side development, for use with the developing applications.</p>
 
         <h3 class="no-margin mt-10">Pathways</h3>
         <div class="path-ways flex row white-color">
